<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.1.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd">
	<modelVersion>4.1.0</modelVersion>
	<parent>
		<groupId>ch.scaille</groupId>
		<artifactId>skylib-starter-parent</artifactId>
		<version>${starter.revision}</version>
		<relativePath />
	</parent>

	<artifactId>libs</artifactId>
	<version>${revision}</version>
	<name>libs</name>
	<packaging>pom</packaging>
	<subprojects>
		<subproject>lib-annotations</subproject>
		<subproject>lib-testing</subproject>
		<subproject>lib-utils</subproject>
		<subproject>lib-javabeans</subproject>
		<subproject>lib-persistence</subproject>
		<subproject>lib-gui</subproject>
		<subproject>lib-gui-generators</subproject>
		<subproject>lib-gui-validation</subproject>
		<subproject>lib-gui-examples</subproject>
		<subproject>lib-generator-utils</subproject>
	</subprojects>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>25</java.version>

		<coverage.temp>${java.io.tmpdir}/coverage/${basedir}</coverage.temp>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.9</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<type>processor</type>
			<version>${lombok.version}</version>
		</dependency>	
		
	</dependencies>

</project>
